Completed Responsive design. - Site will still need responsive design enhancements and code needs refactoring.

--- a/MECAMobile/WebContent/index.html
+++ b/MECAMobile/WebContent/index.html
@@ -166,21 +166,21 @@
 							.colorbox(
 									{
 										href:"stories/gabby.html",
-										maxWidth: "1000px",
+										maxWidth: "80%",
 										height: "750px"
 									});
 					$('a.blacksInWorkplace')
 							.colorbox(
 									{
 										href:"stories/blackInTheWorkplace.html",
-										maxWidth: "1000px",
+										maxWidth: "80%",
 										height: "750px"
 									});
 					$('a.tokenism')
 							.colorbox(
 									{
 										href:"stories/jobs.html",
-										maxWidth: "1000px",
+										maxWidth: "80%",
 										height: "750px"
 									});
 					
@@ -189,21 +189,21 @@
 							.colorbox(
 									{
 										href:"stories/racetothetop.html",
-										maxWidth: "1000px",
+										maxWidth: "80%",
 										height: "750px"
 									});
 					$('a.kfc')
 							.colorbox(
 									{
 										href:"stories/jackmamotivation.html",
-										maxWidth: "1000px",
+										maxWidth: "80%",
 										height: "750px"
 									});
 					$('a.roleModel')
 							.colorbox(
 									{
 										href:"stories/rolemodel.html",
-										maxWidth: "1000px",
+										maxWidth: "80%",
 										height: "750px"
 									});
 					/**************************** third row ****************************/
@@ -211,24 +211,25 @@
 							.colorbox(
 									{
 										href:"stories/blackinsilicon.html",
-										maxWidth: "1000px",
+										maxWidth: "80%",
 										height: "750px"
 									});
 					$('a.latinos')
 							.colorbox(
 									{
 										href:"stories/latinosinworkplace.html",
-										maxWidth: "1000px",
+										maxWidth: "80%",
 										height: "750px"
 									});
 					$('a.ursula')
 							.colorbox(
 									{
 										href:"stories/ursula.html",
-										maxWidth: "1000px",
+										maxWidth: "80%",
 										height: "750px"
 									});
-			   }
+			   } 
+			  
 			});
 	</script>
 
