--- a/MECAMobile/WebContent/stories/jackmamotivation.html
+++ b/MECAMobile/WebContent/stories/jackmamotivation.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>MECA | Index</title>
+	<title>MECA | Blog</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
-	
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
 	<!-- ICON FOR BROWSER TAG -->
 	<link rel="apple-touch-icon" sizes="57x57" href="browser_icon/apple-icon-57x57.png">
@@ -46,7 +46,7 @@
 		 you are amazing and  accomplish anything.
 		 </p>
 		
-		<p> <a href="www.youtube.com/watch?v=DZML325kL5o">Jack Maa's Story</a></p>
+		<p> <a href="http://www.youtube.com/watch?v=DZML325kL5o">Jack Maa's Story</a></p>
 		
 	
 		<!---------------------------------------------------- Disqus - for comments DIV  ----------------------------------------->
