--- a/MECAMobile/WebContent/stories/racetothetop.html
+++ b/MECAMobile/WebContent/stories/racetothetop.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>MECA | Stories</title>
+	<title>MECA | Blog</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<link rel="stylesheet" type="text/css" href="stories.css">
-	
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
 	<!-- ICON FOR BROWSER TAG -->
 	<link rel="apple-touch-icon" sizes="57x57" href="browser_icon/apple-icon-57x57.png">
