--- a/MECAMobile/WebContent/submissions.html
+++ b/MECAMobile/WebContent/submissions.html
@@ -67,7 +67,7 @@
 					<input type="hidden" name="_next" value="http://localhost:8080/MECA/submissions.html" />
 					<input type="hidden" name="_subject" value="Your MECA submission" />
 					<input type="text" name="_gotcha" style="display:none" />
-					<input type="submit" class="submit"  onclick="myFunction()" value="Submit">
+					<div class="submitButton" ><input type="submit"  onclick="myFunction()" value="Submit"></div>
 				</form>
 			</div> 
 		</div>
