--- a/MECAMobile/WebContent/stories/jobs.html
+++ b/MECAMobile/WebContent/stories/jobs.html
@@ -2,8 +2,9 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>MECA | Index</title>
+	<title>MECA | Blog</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
 	
 	<!-- ICON FOR BROWSER TAG -->
