Updated videos to be responsive.  Updated broken link for kfc story

--- a/MECAMobile/stories/latinosinworkplace.html
+++ b/MECAMobile/stories/latinosinworkplace.html
@@ -30,7 +30,7 @@
 </head>
 <body>
 	<div class="storyPageContent">
-		<h1>What do you think we can do to counter stereotypes in our schools, workplaces and communities?</h1>
+		<h1>What do you do when you are faced with these types of problems in your workplace or school?</h1>
 		<p>We are all here because we are the minority in our school, workplace or community. What do you think 
 		we can do to counter stereotypes? Should we let the person know that their comment is not ok? If so, how? Comment below…</p> 
 		
