--- a/MECAMobile/stories/jackmamotivation.html
+++ b/MECAMobile/stories/jackmamotivation.html
@@ -46,7 +46,7 @@
 		 you are amazing and  accomplish anything.
 		 </p>
 		
-		<p> <a href="http://www.youtube.com/watch?v=DZML325kL5o">Jack Maa's Story</a></p>
+		<p><a href="http://www.businessinsider.com/the-inspiring-life-story-of-alibaba-founder-jack-ma-2014-10">Jack Maa's Story</a></p>
 		
 	
 		<!---------------------------------------------------- Disqus - for comments DIV  ----------------------------------------->
