pushing production code

--- a/MECAMobile/stories/blackInTheWorkplace.html
+++ b/MECAMobile/stories/blackInTheWorkplace.html
@@ -33,7 +33,10 @@
 		<h1>10 Moments Black People In The Workplace Know Too Well</h1>
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/DqHrT_MD4ys" frameborder="0" allowfullscreen></iframe>
 		
-	
+		<!---------------------------------------------------- Back to Stories Main Page - to be replaced with navigation  ----------------------------------------->
+		<form action="http://www.ourmeca.com">
+			<input type="submit" value="Back to MECA Stories" >
+		</form>
 		<!---------------------------------------------------- Disqus - for comments DIV  ----------------------------------------->
 		<div id="disqus_thread"></div>
 	</div>
