--- a/MECAMobile/stories/ursula.html
+++ b/MECAMobile/stories/ursula.html
@@ -37,6 +37,11 @@
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/5seyholfVGQ" frameborder="0" allowfullscreen></iframe>
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/LHHBtB2B5X4" frameborder="0" allowfullscreen></iframe>
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/WOIoSjAQ2t0" frameborder="0" allowfullscreen></iframe>
+		
+		<!---------------------------------------------------- Back to Stories Main Page - to be replaced with navigation  ----------------------------------------->
+		<form action="http://www.ourmeca.com">
+			<input type="submit" value="Back to MECA Stories" >
+		</form>
 		<!---------------------------------------------------- Disqus - for comments DIV  ----------------------------------------->
 		<div id="disqus_thread"></div>
 	</div>
