--- a/MECAMobile/stories/gabby.html
+++ b/MECAMobile/stories/gabby.html
@@ -43,7 +43,10 @@
 		
 		<p>Check out <a href="http://www.youtube.com/watch?v=DZML325kL5o">Gabby's Story</a></p>
 		
-	
+		<!---------------------------------------------------- Back to Stories Main Page - to be replaced with navigation  ----------------------------------------->
+		<form action="http://www.ourmeca.com">
+			<input type="submit" value="Back to MECA Stories" >
+		</form>
 		<!---------------------------------------------------- Disqus - for comments DIV  ----------------------------------------->
 		<div id="disqus_thread"></div>
 	</div>
