--- a/MECAMobile/stories/jackmamotivation.html
+++ b/MECAMobile/stories/jackmamotivation.html
@@ -46,9 +46,12 @@
 		 you are amazing and  accomplish anything.
 		 </p>
 		
-		<p><a href="http://www.businessinsider.com/the-inspiring-life-story-of-alibaba-founder-jack-ma-2014-10">Jack Maa's Story</a></p>
+		<p> <a href="http://www.youtube.com/watch?v=DZML325kL5o">Jack Maa's Story</a></p>
 		
-	
+		<!---------------------------------------------------- Back to Stories Main Page - to be replaced with navigation  ----------------------------------------->
+		<form action="http://www.ourmeca.com">
+			<input type="submit" value="Back to MECA Stories" >
+		</form>
 		<!---------------------------------------------------- Disqus - for comments DIV  ----------------------------------------->
 		<div id="disqus_thread"></div>
 	</div>
