--- a/MECAMobile/stories/jobs.html
+++ b/MECAMobile/stories/jobs.html
@@ -44,7 +44,10 @@
 		<p>-J-</p>
 		
 		
-	
+		<!---------------------------------------------------- Back to Stories Main Page - to be replaced with navigation  ----------------------------------------->
+		<form action="http://www.ourmeca.com">
+			<input type="submit" value="Back to MECA Stories" >
+		</form>
 		<!---------------------------------------------------- Disqus - for comments DIV  ----------------------------------------->
 		<div id="disqus_thread"></div>
 	</div>
