--- a/MECAMobile/stories/latinosinworkplace.html
+++ b/MECAMobile/stories/latinosinworkplace.html
@@ -30,13 +30,16 @@
 </head>
 <body>
 	<div class="storyPageContent">
-		<h1>What do you do when you are faced with these types of problems in your workplace or school?</h1>
+		<h1>What do you think we can do to counter stereotypes in our schools, workplaces and communities?</h1>
 		<p>We are all here because we are the minority in our school, workplace or community. What do you think 
 		we can do to counter stereotypes? Should we let the person know that their comment is not ok? If so, how? Comment below…</p> 
 		
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/XnFUDx3wC-Y" frameborder="0" allowfullscreen></iframe>
 		
-	
+		<!---------------------------------------------------- Back to Stories Main Page - to be replaced with navigation  ----------------------------------------->
+		<form action="http://www.ourmeca.com">
+			<input type="submit" value="Back to MECA Stories" >
+		</form>
 		<!---------------------------------------------------- Disqus - for comments DIV  ----------------------------------------->
 		<div id="disqus_thread"></div>
 	</div> 
