--- a/MECAMobile/stories/racetothetop.html
+++ b/MECAMobile/stories/racetothetop.html
@@ -33,7 +33,10 @@
 	<div class="storyPageContent">
 		<h1>What do you think about Starbuck’s new movement to Race Together?</h1>
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/3WNu67SjHbo" allowfullscreen></iframe>
-	
+		<!---------------------------------------------------- Back to Stories Main Page - to be replaced with navigation  ----------------------------------------->
+		<form action="http://www.ourmeca.com">
+			<input type="submit" value="Back to MECA Stories" >
+		</form>
 		<!---------------------------------------------------- Disqus - for comments DIV  ----------------------------------------->
 		<div id="disqus_thread"></div>
 	</div>
