--- a/MECAMobile/stories/rolemodel.html
+++ b/MECAMobile/stories/rolemodel.html
@@ -51,7 +51,11 @@
 		trying to be just like you.</p>
 		
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/18p2Yo8VLHo" frameborder="0" allowfullscreen></iframe>
-	
+		
+		<!---------------------------------------------------- Back to Stories Main Page - to be replaced with navigation  ----------------------------------------->
+		<form action="http://www.ourmeca.com">
+			<input type="submit" value="Back to MECA Stories" >
+		</form>
 		<!---------------------------------------------------- Disqus - for comments DIV  ----------------------------------------->
 		<div id="disqus_thread"></div>
 	</div>
