Created a bigger button for the stories. made story pics look better on mobile. fixed jack ma link

--- a/MECAMobile/stories/jackmamotivation.html
+++ b/MECAMobile/stories/jackmamotivation.html
@@ -46,12 +46,14 @@
 		 you are amazing and  accomplish anything.
 		 </p>
 		
-		<p> <a href="http://www.youtube.com/watch?v=DZML325kL5o">Jack Maa's Story</a></p>
+		<p> <a href="http://www.businessinsider.com/alibaba-founder-jack-ma-on-rejection-2015-2">Jack Maa's Story</a></p>
 		
 		<!---------------------------------------------------- Back to Stories Main Page - to be replaced with navigation  ----------------------------------------->
-		<form action="http://www.ourmeca.com">
-			<input type="submit" value="Back to MECA Stories" >
-		</form>
+		<div class="back-to-meca-button"  >
+			<form action="http://www.ourmeca.com">
+				<input type="submit" value="Back to MECA Stories" >
+			</form>
+		</div>
 		<!---------------------------------------------------- Disqus - for comments DIV  ----------------------------------------->
 		<div id="disqus_thread"></div>
 	</div>
