--- a/MECAMobile/stories/gabby.html
+++ b/MECAMobile/stories/gabby.html
@@ -44,9 +44,11 @@
 		<p>Check out <a href="http://www.youtube.com/watch?v=DZML325kL5o">Gabby's Story</a></p>
 		
 		<!---------------------------------------------------- Back to Stories Main Page - to be replaced with navigation  ----------------------------------------->
-		<form action="http://www.ourmeca.com">
-			<input type="submit" value="Back to MECA Stories" >
-		</form>
+		<div class="back-to-meca-button"  >
+			<form action="http://www.ourmeca.com">
+				<input type="submit" value="Back to MECA Stories" >
+			</form>
+		</div>
 		<!---------------------------------------------------- Disqus - for comments DIV  ----------------------------------------->
 		<div id="disqus_thread"></div>
 	</div>
