--- a/MECAMobile/stories/jobs.html
+++ b/MECAMobile/stories/jobs.html
@@ -45,9 +45,11 @@
 		
 		
 		<!---------------------------------------------------- Back to Stories Main Page - to be replaced with navigation  ----------------------------------------->
-		<form action="http://www.ourmeca.com">
-			<input type="submit" value="Back to MECA Stories" >
-		</form>
+		<div class="back-to-meca-button"  >
+			<form action="http://www.ourmeca.com">
+				<input type="submit" value="Back to MECA Stories" >
+			</form>
+		</div>
 		<!---------------------------------------------------- Disqus - for comments DIV  ----------------------------------------->
 		<div id="disqus_thread"></div>
 	</div>
