--- a/MECAMobile/stories/latinosinworkplace.html
+++ b/MECAMobile/stories/latinosinworkplace.html
@@ -37,9 +37,11 @@
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/XnFUDx3wC-Y" frameborder="0" allowfullscreen></iframe>
 		
 		<!---------------------------------------------------- Back to Stories Main Page - to be replaced with navigation  ----------------------------------------->
-		<form action="http://www.ourmeca.com">
-			<input type="submit" value="Back to MECA Stories" >
-		</form>
+		<div class="back-to-meca-button"  >
+			<form action="http://www.ourmeca.com">
+				<input type="submit" value="Back to MECA Stories" >
+			</form>
+		</div>
 		<!---------------------------------------------------- Disqus - for comments DIV  ----------------------------------------->
 		<div id="disqus_thread"></div>
 	</div> 
