Fixed submit button

--- a/MECAMobile/submissions.html
+++ b/MECAMobile/submissions.html
@@ -64,7 +64,7 @@
 					<p>Email: <input type="email" name="email"></p>
 					<p>Title: <input type="text" name="title"></p>
 					<p>Story: <textarea name="story"></textarea> </p>
-					<input type="hidden" name="_next" value="http://localhost:8080/MECA/submissions.html" />
+					<input type="hidden" name="_next" value="http://ourmeca.com/submissions.html" />
 					<input type="hidden" name="_subject" value="Your MECA submission" />
 					<input type="text" name="_gotcha" style="display:none" />
 					<div class="submitButton" ><input type="submit"  onclick="myFunction()" value="Submit"></div>
