Updated CSS and photos

--- a/MECAMobile/stories/gabby.html
+++ b/MECAMobile/stories/gabby.html
@@ -30,8 +30,8 @@
 </head>
 <body>
 	<div class="storyPageContent">
-		<img class="blogPic" src="story_page_pics/Gabby.png" alt="Picture of Gabby Douglas">
-		<h1 class="blogHeader" >The Gabby Douglas Story Is Our Story</h1>
+		<img src="story_page_pics/Gabby.png" alt="Picture of Gabby Douglas">
+		<h1>The Gabby Douglas Story Is Our Story</h1>
 		<p><em>Hard days are the best because that’s when champions are made. – Gabby Douglas</em></p>
 		<p>As I enjoyed my lazy wild hair Saturday, I scrolled through Netflix movies and documentaries and found the Gabby Douglas story. As I watched I admired her strength and talent. However, in the movie there was a point in which Gabby wanted to give up her dream. She, like so many of us, grew tired of being the only.</p>
 		
