--- a/MECAMobile/submissions.html
+++ b/MECAMobile/submissions.html
@@ -3,7 +3,13 @@
 <head>
 	<meta charset="UTF-8">
 	<title>MECA | Submissions</title>
+	
+	<script src="jquery-2.1.0.min.js"></script>
+	<script src="bootstrap.min.js"></script> 
+	<link rel="stylesheet" type="text/css" href="css_and_ai/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css_and_ai/styles.css">
+	<link rel="stylesheet" type="text/css" href="css_and_ai/colorbox.css">
+	
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
 	<!-- ICON FOR BROWSER TAG -->
@@ -26,7 +32,6 @@
 	<meta name="msapplication-TileImage" content="pictures/browser_icon/ms-icon-144x144.png">
 	<meta name="theme-color" content="#ffffff">
 	
-	
 </head>
 <body>
 	<div class="mecaSameLineBurger">
@@ -45,31 +50,36 @@
 						<!-- MECA header picture was here -->
 						
 						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li><a href="about.html">About</a></li>
-							<li><a href="submissions.html"><b>Submission Board</b></a></li>
+							<li><a href="index.html">HOME</a></li>
+							<li><a href="about.html">ABOUT</a></li>
+							<li><a href="submissions.html"><b>SUBMISSIONS</b></a></li>
 						</ul>
 					</div>
 				</ul>
 			</div>
 		</nav>
 	</div>
-	
-		<!--  input Type and name submit type and value  -->
-		<div class="submit">
-			<div class="submissionBoard">
-				<img src="pictures/submissions_page/storyboard.gif" alt="picture of astronaut"/>
-				<form action="//formspree.io/mecastories@gmail.com"  method="POST">
-					<p>Name: <input type="text" name="name"></p>
-					<p>Email: <input type="email" name="email"></p>
-					<p>Title: <input type="text" name="title"></p>
-					<p>Story: <textarea name="story"></textarea> </p>
-					<input type="hidden" name="_next" value="http://ourmeca.com/submissions.html" />
-					<input type="hidden" name="_subject" value="Your MECA submission" />
-					<input type="text" name="_gotcha" style="display:none" />
-					<div class="submitButton" ><input type="submit"  onclick="myFunction()" value="Submit"></div>
-				</form>
-			</div> 
+	<div class="container">
+			<div class="row">
+				<div class="col-sm-12">
+					<!--  input Type and name submit type and value  -->
+					<div class="submit">
+						<div class="submissionBoard">
+							<img src="pictures/submissions_page/storyboard.gif" alt="picture of astronaut"/>
+							<form action="//formspree.io/mecastories@gmail.com"  method="POST">
+								<p>Name: <input type="text" name="name"></p>
+								<p>Email: <input type="email" name="email"></p>
+								<p>Title: <input type="text" name="title"></p>
+								<p>Story: <textarea name="story"></textarea> </p>
+								<input type="hidden" name="_next" value="http://ourmeca.com/submissions.html" />
+								<input type="hidden" name="_subject" value="Your MECA submission" />
+								<input type="text" name="_gotcha" style="display:none" />
+								<input type="submit" class="submitButton" onclick="myFunction()" value="Submit">
+							</form>
+						</div> 
+					</div>
+				</div>
+			</div>
 		</div>
 		<script>
 			function myFunction() {
